examples/test/testpolicy11398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11398
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key25: value7
      key42: value13
      key33: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value7
      podSelector:
        matchLabels:
          key19: value21
          key29: value19
          key0: value41
